example/controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: dnslb
  name: dnslb-controller-manager
  namespace: garden
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dnslb
        component: dnslb-controller-manager
    spec:
      containers:
        - name: controller-manager
          image: eu.gcr.io/gardener-project/dnslb-controller-manager:0.1.0-master
          imagePullPolicy: "Always"
          args:
            - --controllers=source
            - --targetkube=/secrets/kubeconfig-cluster.yaml
            - --identity=GardenRing
            - --ttl=60
            - --cluster=a
            - --port=8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            {}
          volumeMounts:
           - mountPath: /secrets
             name: garden-secrets

      volumes:
      - name: garden-secrets
        secret:
          defaultMode: 420
          secretName: garden-secrets

      serviceAccountName: dnslb
      terminationGracePeriodSeconds: 120
