example/apiing.yaml
# SPDX-FileCopyrightText: 2018 SAP SE or an SAP affiliate company and Gardener contributors
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    loadbalancer.gardener.cloud/dnsloadbalancer: test
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-port-in-redirects: "true"
  labels:
  name: test
  namespace: garden
spec:
  rules:
  - host: test.garden.ring01.dev.k8s.ondemand.com
    http:
      paths:
      - backend:
          serviceName: garden-gardener-dashboard
          servicePort: 8080
        path: /
  - host: bla.garden.ring01.dev.k8s.ondemand.com
    http:
      paths:
      - backend:
          serviceName: garden-gardener-dashboard
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - test.garden.ring01.dev.k8s.ondemand.com
    - bla.garden.ring01.dev.k8s.ondemand.com
    secretName: garden-gardener-dashboard-tls
